<resources>
    <string name="app_name">Pokedex</string>
    <string name="app_imageDescription">Pokemon</string>
    <string name="app_button_login">Login</string>
    <string name="app_button_register">Register</string>
    <string name="app_button_catch">Catch</string>
    <string name="app_button_release">Release</string>
    <string name="app_button_logout">Logout</string>
    <string name="app_intro">Enter your email and password</string>
    <string name="app_register_here">Register here</string>
    <string name="app_already_signed_up">I have an account</string>
    <string name="app_myPokemon">My Pokemon</string>
    <string name="app_loading">Loading…</string>
    <string name="app_hp">HP</string>
    <string name="app_attack">Attack</string>
    <string name="app_defense">Defense</string>
    <string name="app_specialAttack">Sp. Attack</string>
    <string name="app_specialDefense">Sp. Defense</string>
    <string name="app_speed">Speed</string>
    <string name="app_hint_email">Email</string>
    <string name="app_hint_username">Username</string>
    <string name="app_hint_password">Password</string>
    <string name="app_hint_check_password">Confirm password</string>
    <string name="app_hint_catch">Catch a Pokemon</string>
    <string name="app_hint_search">Search</string>
    <string name="facebook_app_id" translatable="false">960252548257345</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb960252548257345</string>
</resources>